feat: Add MQTT reconnection with exponential backoff
- Detect connection failures in MQTT_ProcessLoop
- Implement backoffAlgorithm for retry delays
- Max 5 retries with 1s-32s backoff range
- Log reconnection attempts and success
- Automatic recovery from network disruptions

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(SRCS "aws_task.c" "thread_coap_task.c" "Thread_BR.c"
                     INCLUDE_DIRS "."
-                    REQUIRES coreMQTT aws_helpers
+                    REQUIRES coreMQTT backoffAlgorithm aws_helpers
                     EMBED_TXTFILES ${PROJECT_DIR}/certs/aws-root-ca.pem
                     ${PROJECT_DIR}/certs/device.crt
                     ${PROJECT_DIR}/certs/device.key)
