--- a/components/aws_helpers/CMakeLists.txt
+++ b/components/aws_helpers/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "network_transport.c" "clock_esp.c"
     INCLUDE_DIRS "."
-    REQUIRES esp-tls mbedtls
+    REQUIRES esp-tls mbedtls esp_timer coreMQTT
 )
